--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>ACS 355 Registration</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ACS 355 Registration</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
   <body>
     <div class="main">
